// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package sdb;

option cc_generic_services = true;
option go_package="./proto";

// The greeting service definition.
  // Sends a greeting
service Worker {
  rpc Exec(QueryRequest) returns (QueryReply) {}
}

// The request message containing the user's name.
message QueryRequest {
  uint64 query_id = 1;
  uint64 sid = 2;
  uint64 uid = 3;
  uint64 dbid = 4;
  uint64 slice_id = 5;

  uint64 min_xid = 6;
  uint64 max_xid = 7;

  string sql = 8;
  string query_info = 9;
  string plan_info = 10;
  string plan_info_dxl = 11;

  uint64 guc_version = 20;
  map<uint64, uint64> catalog_version = 21;
}

// The response message containing the greetings
message QueryReply {
  string message = 1;
}
